--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -5,6 +5,8 @@
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   box-sizing: border-box;
   border-radius: 10px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 /* .description {
