--- a/src/components/Statistics/StatisticItem/StatisticItem.module.css
+++ b/src/components/Statistics/StatisticItem/StatisticItem.module.css
@@ -1,7 +1,14 @@
-/* .item {
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  border: 2px solid black;
+  width: 80px;
+  background-color: blue;
 }
-,
-.label {
+
+/* .label {
 }
 
 ,
