--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,4 +1,24 @@
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  border: 2px solid black;
+  width: 80px;
+}
+
 .statistics {
   background-color: aliceblue;
   margin-bottom: 40px;
+}
+
+.title {
+  text-align: center;
+}
+
+.statList {
+  display: flex;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
